# MLOPS_Lab11

./: Dockerfile  Dockerfile.dev  pyproject.toml
.github/workflows/: ci_cd_workflow.yml  hello_world.yml
sentiment_app/: app.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
tests/: test_mock.py
