[project]
name = "mlops-lab11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.11",
    "fastapi>=0.125.0",
    "numpy>=2.3.5",
    "scikit-learn>=1.8.0",
    "skl2onnx>=1.19.1",
    "tokenizers>=0.22.1",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
integration = [
    "awscli>=1.44.1",
    "boto3>=1.42.11",
    "botocore>=1.42.11",
    "ruff>=0.14.9",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "pytest>=9.0.2",
]

deployment = [
    "onnx>=1.20.0",
]

inference = [
    "mangum>=0.19.0",
    "awslambdaric>=3.1.1",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
]

